@@ -281,6 +281,8 @@ DEFINE_G_KEYS(options_afeedback)
 DEFINE_G_KEYS(options_grid)
 DEFINE_G_KEYS(options_snap)
 DEFINE_G_KEYS(options_snap_size)
+DEFINE_G_KEYS(options_scale_up_snap_size)
+DEFINE_G_KEYS(options_scale_down_snap_size)
 DEFINE_G_KEYS(options_rubberband)
 DEFINE_G_KEYS(options_show_log_window)
 DEFINE_G_KEYS(options_show_coord_window)
